--- a/DirectX12CG/DirectX12CG.vcxproj.filters
+++ b/DirectX12CG/DirectX12CG.vcxproj.filters
@@ -375,7 +375,7 @@
     <ClCompile Include="Engin\Pipeline\Depth.cpp">
       <Filter>ソース ファイル\Engin\Pipeline</Filter>
     </ClCompile>
-    <ClCompile Include="Query.cpp">
+    <ClCompile Include="Engin\Collide\Query.cpp">
       <Filter>ソース ファイル\Engin\Collider</Filter>
     </ClCompile>
     <ClCompile Include="Engin\Util\App.cpp">
@@ -383,6 +383,9 @@
     </ClCompile>
     <ClCompile Include="App\Player.cpp">
       <Filter>ソース ファイル\Game</Filter>
+    </ClCompile>
+    <ClCompile Include="Engin\Util\LevelLoader.cpp">
+      <Filter>ソース ファイル\Engin\Util</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -625,7 +628,7 @@
     <ClInclude Include="Engin\Pipeline\Depth.h">
       <Filter>ヘッダー ファイル\Engin\Pipeline</Filter>
     </ClInclude>
-    <ClInclude Include="Query.h">
+    <ClInclude Include="Engin\Collide\Query.h">
       <Filter>ヘッダー ファイル\Engin\Collider</Filter>
     </ClInclude>
     <ClInclude Include="Engin\Util\App.h">
@@ -636,6 +639,9 @@
     </ClInclude>
     <ClInclude Include="App\Player.h">
       <Filter>ヘッダー ファイル\Game</Filter>
+    </ClInclude>
+    <ClInclude Include="Engin\Util\LevelLoader.h">
+      <Filter>ヘッダー ファイル\Engin\Util</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
