--- a/DirectX12CG/DirectX12CG.vcxproj
+++ b/DirectX12CG/DirectX12CG.vcxproj
@@ -337,8 +337,8 @@
       <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>xcopy "$(SolutionDir)\External\Assimp\lib\Debug\assimp-vc143-mtd.lib" $(TargetDir)\lib\assimp\lib\Debug/Y
-xcopy "$(SolutionDir)\External\Assimp\lib\Debug\assimp-vc143-mtd.pdb" $(TargetDir)\lib\assimp\lib\Debug/Y</Command>
+      <Command>xcopy "$(SolutionDir)\External\Assimp\lib\Debug\assimp-vc143-mtd.lib" $(TargetDir)lib\assimp\lib\Debug/Y
+xcopy "$(SolutionDir)\External\Assimp\lib\Debug\assimp-vc143-mtd.pdb" $(TargetDir)lib\assimp\lib\Debug/Y</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
